<resources>
    <string name="app_name">Messenger</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="not_registered">Not Registered?</string>
    <string name="todo">TODO</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_nickname">Enter your nickname</string>
    <string name="what_i_do">What I Do</string>
    <string name="sign_up_main">SIGN UP</string>
    <string name="update">Update</string>
    <string name="sign_out">Sign Out</string>
    <string name="select_photo">Select Photo</string>
    <string name="description_text">magariaaaa</string>
    <string name="nickname">nickname</string>
    <string name="message">"    Message"</string>
    <string name="message_">" Message"</string>
    <string name="search">"  Search"</string>
    <string name="home_page_search_messages">"         Search"</string>
    <string name="chat_nickname" />
    <string name="search_">Search</string>
    <string name="_message_">Message</string>
    <string name="search__">Search</string>
    <string name="magarikaciTest">magarikaci</string>
</resources>