<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="300dp"
        android:layout_height="42dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="2dp"
        android:autofillHints=""
        android:background="@drawable/rounded_borders"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_your_nickname"

        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="@+id/sign_avatar_image"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="@+id/sign_avatar_image"
        app:layout_constraintTop_toBottomOf="@+id/sign_avatar_image"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="300dp"
        android:layout_height="42dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/rounded_borders"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />


    <EditText
        android:id="@+id/whatIDo"
        android:layout_width="300dp"
        android:layout_height="42dp"
        android:layout_marginTop="424dp"
        android:autofillHints=""
        android:background="@drawable/rounded_borders"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/what_i_do"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="108dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:text="@string/sign_up_main"
        app:backgroundTint="#3F51B5"
        app:layout_constraintEnd_toEndOf="@+id/whatIDo"
        app:layout_constraintStart_toStartOf="@+id/whatIDo"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <ImageView
        android:id="@+id/sign_avatar_image"
        android:layout_width="218dp"
        android:layout_height="201dp"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:layout_marginBottom="2dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/avatar_image_placeholder" />

</androidx.constraintlayout.widget.ConstraintLayout>