<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainPage.MainActivity">

    <EditText
        android:id="@+id/person_name"
        android:layout_width="@dimen/activityMainpnW"
        android:layout_height="@dimen/activityMainpnH"
        android:layout_marginTop="@dimen/activityMainpnmt"
        android:layout_marginBottom="@dimen/activityMainpnmb"
        android:autofillHints=""
        android:background="@drawable/rounded_borders"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_your_nickname"

        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        app:layout_constraintBottom_toTopOf="@+id/user_job"
        app:layout_constraintEnd_toEndOf="@+id/user_select_avatar"
        app:layout_constraintStart_toStartOf="@+id/user_select_avatar"
        app:layout_constraintTop_toBottomOf="@+id/user_select_avatar"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/user_job"
        android:layout_width="@dimen/activityMainjobW"
        android:layout_height="@dimen/activityMainjobH"
        android:layout_marginTop="@dimen/activityMainjobmt"
        android:autofillHints=""
        android:background="@drawable/rounded_borders"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/person_name"
        app:layout_constraintStart_toStartOf="@+id/person_name"
        app:layout_constraintTop_toBottomOf="@+id/person_name" />

    <Button
        android:id="@+id/updateInfo_button"
        android:layout_width="@dimen/activityMainupdatebtnW"
        android:layout_height="@dimen/activityMainupdbntH"
        android:layout_marginTop="@dimen/activityMainupdtbtnMt"
        android:text="@string/sign_in"
        app:backgroundTint="@color/activityMainupdtBtnCol"
        app:cornerRadius="@dimen/activityMainupdbtnRad"
        app:layout_constraintEnd_toEndOf="@+id/user_job"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/user_job"
        app:layout_constraintTop_toBottomOf="@+id/user_job" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activityMainsignmb"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        app:backgroundTint="@color/activityMainsignTint"
        app:strokeWidth="@dimen/activityMainsingstrke"
        app:cornerRadius="@dimen/activityMainsingRad"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/updateInfo_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/updateInfo_button" />

    <TextView
        android:id="@+id/not_registered_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activityMainnotRegmb"
        android:text="@string/not_registered"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_button"
        app:layout_constraintEnd_toEndOf="@+id/sign_up_button"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="@+id/sign_up_button"
        app:layout_constraintTop_toBottomOf="@+id/updateInfo_button"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/user_select_avatar"
        android:layout_width="@dimen/activityMainavatW"
        android:layout_height="@dimen/activityMainavatH"
        android:layout_marginStart="@dimen/activityMainavatMs"
        android:layout_marginLeft="@dimen/activityMainavatMl"
        android:layout_marginTop="@dimen/activityMainavamt"
        android:layout_marginEnd="@dimen/activityMainavatme"
        android:layout_marginRight="@dimen/activityMainavatmr"
        android:layout_marginBottom="@dimen/activityMainavatmb"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/person_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/avatar_image_placeholder" />


</androidx.constraintlayout.widget.ConstraintLayout>